# thermite

./: .gitignore  Cargo.toml  README.md  codecov.yml  deny.toml
.github/workflows/: audit.yml  check.yml  nostd.yml  safety.yml  scheduled.yml  test.yml
search_trace/: Cargo.toml
search_trace/src/: main.rs
src/: board_mask.rs  castles.rs  chess_move.rs  direction.rs  driver.rs  engine_types.rs  game.rs  half_move_clock.rs  legal_position.rs  lib.rs  main.rs  node_count.rs  pieces.rs  player_color.rs  ply_count.rs  raw_position.rs  searchable.rs  square.rs  zobrist.rs
src/bitboard/: attacks.rs  direction.rs  lines.rs  mod.rs  shifts.rs
src/chess_move/: capture.rs  castle.rs  double_pawn_push.rs  en_passant_capture.rs  mod.rs  promoting_capture.rs  promotion.rs  quiet.rs
src/engine/: mod.rs
src/evaluation/: mod.rs  pawn_evaluation.rs
src/game/: castle_rights.rs  chess_move.rs  mod.rs  piece_type.rs  side.rs  square.rs
src/position/: hash_history.rs  legal_position.rs  material_evaluation.rs  mod.rs  position_builder.rs
src/position/make_move/: make.rs  mod.rs  unmake.rs
src/position/move_gen/: evasions.rs  mod.rs  non_evasion.rs  pawns.rs
src/uci/: driver.rs  engine.rs  info_writer.rs  mod.rs  search_parameters.rs  search_result.rs  uci_command.rs  uci_info.rs  uci_options.rs  uci_position.rs  uci_reader.rs  uci_response.rs  uci_score.rs  uci_writer.rs
thermite_core/: Cargo.toml
thermite_core/src/: bitboard.rs  castles.rs  chess_move.rs  direction.rs  lib.rs  move_type.rs  piece_count.rs  piece_type.rs  pieces.rs  player_color.rs  ply_count.rs  promotion_piece_type.rs  side.rs  square.rs  zobrist.rs
thermite_core/src/bitboard/: attacks.rs  direction.rs  lines.rs  mod.rs  shift.rs  shifts.rs
thermite_core/src/board/: fen.rs  make_move.rs  mod.rs  state.rs  unmake_move.rs
thermite_core/src/board/zobrist/: keys.rs  mod.rs
thermite_core/src/castles/: by_castle_direction.rs  direction.rs  mod.rs  rights.rs  squares.rs
thermite_core/src/chess_move/: castle.rs  double_pawn_push.rs  promoting_capture.rs
thermite_core/src/evaluation/: pawn_evaluation.rs  score.rs
thermite_core/src/piece_square_eval/: mod.rs
thermite_core/src/piece_type/: by_piece_type.rs  mod.rs
thermite_core/src/player/: by_player.rs  mod.rs
thermite_core/src/position/: hash_history.rs  legal_position.rs  material_evaluation.rs  mod.rs  position_builder.rs
thermite_core/src/position/make_move/: make.rs  unmake.rs
thermite_core/src/position/move_gen/: evasions.rs  non_evasion.rs  pawns.rs
thermite_core/src/score/: game_stage.rs  mod.rs  positional_evaluation.rs  sided_piece_counts.rs  tapered_pawn_approximation_evaluation.rs
thermite_core/src/sided_piece/: mod.rs
thermite_core/src/square/: by_square.rs  mod.rs
thermite_core/src/zobrist/: keys.rs  mod.rs
thermite_evaluation/: Cargo.toml
thermite_evaluation/src/: evaluator.rs
thermite_movegen/: Cargo.toml
thermite_movegen/src/: create_moves.rs  generator.rs  lib.rs  move_list.rs  pseudo_legal_move.rs
thermite_search/: Cargo.toml
thermite_search/src/: halt_flag.rs  lib.rs  move_ordering.rs  search_constraints.rs  search_error.rs  search_inputs.rs  search_results.rs  search_state.rs  transposition_table.rs
uci_driver/: Cargo.toml
uci_driver/src/: lib.rs
