[package]
name = "thermite"
description = "Another rust chess engine"
categories = ["games", "command-line-utilities"]
authors.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uci_driver = { path = "./uci_driver" }
thermite_search = { path = "./thermite_search", features = ["q_search", "move_ordering", "transposition_table", "progress_reporting", "multipv", "opening_book", "reductions", "pruning", "aspiration_windows"] }
thermite_core = { path = "./thermite_core" }
lazy_static = "1.4.0"
spmc = "0.3.0"
repl-rs = "0.2.7"

[workspace]
members = [
    ".",
    "thermite_core",
    "thermite_movegen",
    "thermite_evaluation",
    "thermite_search",
    "uci_driver",
    "search_trace"
]

[workspace.package]
authors = ["Jeffrey Meyer <itotallyrock>"]
repository = "https://github.com/itotallyrock/thermite"
keywords = ["chess"]
version = "0.1.0"
edition = "2021"
license-file = "./LICENSE.md"
readme = "./README.md"

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1
debug = 2
