[package]
name = "thermite"
description = "Another rust chess engine"
categories = ["games", "command-line-utilities"]
version = "0.1.0"
edition = "2021"
authors = ["Jeffrey Meyer <itotallyrock>"]
repository = "https://github.com/itotallyrock/thermite"
keywords = ["chess"]
license-file = "./LICENSE.md"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std"]
std = ["arrayvec/std", "once_cell/std"]

[dependencies]
derive_more = "0.99.17"
enum-map = "2.5.0"
subenum = "1.0.1"
bitmask-enum = "2.1.0"
arrayvec = { version = "0.7.2", default-features = false }
enum-iterator = "1.4.1"
once_cell = { version = "1.17.1", features = ["critical-section"], default-features = false }
bitintr = "0.3.0"

[dev-dependencies]
test-case = "3.1.0"
critical-section = { version = "1.1", features = ["std"]}

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1
debug = 2
