[package]
name = "thermite"
description = "Another rust chess engine"
categories = ["games", "command-line-utilities"]
authors.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "thermite_core"]

[workspace.package]
keywords = ["chess"]
description = "Another rust chess engine"
categories = ["games", "command-line-utilities"]
version = "0.1.0"
edition = "2021"
authors = ["Jeffrey Meyer <itotallyrock>"]
repository = "https://github.com/itotallyrock/thermite"
license-file = "./LICENSE.md"
readme = "./README.md"

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1
debug = 2
