[package]
name = "thermite_core"
description = "The main functionality required to play a game of chess and evaluate a position"
categories = ["games", "algorithms"]
authors.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["arrayvec/std", "once_cell/std", "subenum/std", "derive_more/std"]

[dependencies]
derive_more = { version = "1.0.0", default-features = false, features = ["add", "add_assign", "as_ref", "mul", "mul_assign", "deref", "deref_mut", "into", "constructor", "display", "from_str", "sum", "not"] }
enum-map = "2.6.3"
subenum = { version = "1.1.1", default-features = false }
bitmask-enum = "2.2.2"
arrayvec = { version = "0.7.4", default-features = false }
enum-iterator = "1.4.1"
once_cell = { version = "1.18.0", features = ["critical-section"], default-features = false }

[dev-dependencies]
test-case = "3.1.0"
critical-section = { version = "1.1", features = ["std"] }
fastrand = "2.0.0"
