[package]
name = "thermite_evaluation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["evaluation_table", "endgame_table"]
piece_square_evaluation = []
evaluation_table = ["thermite_core/zobrist", "dashmap"]
endgame_table = ["dashmap"]

[dependencies]
thermite_core = { path = "../thermite_core" }
dfdx = "0.8.0"
dashmap = { version = "5.3.4", optional = true }