[package]
name = "thermite_evaluation"
description = "Chess position evaluation functions, necessary for scoring chess moves while searching."
categories = ["games", "algorithms"]
authors.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
piece_square_evaluation = []
evaluation_table = ["thermite_core/zobrist", "dashmap"]
nnue_eval = ["thermite_core/nnue_accumulator", "dfdx"]

[dependencies]
thermite_core = { path = "../thermite_core", features = [] }
dfdx = { version = "0.8.0", optional = true }
dashmap = { version = "5.3.4", optional = true }