[package]
name = "thermite_movegen"
description = "Generate moves for Thermite chess positions"
categories = ["games", "algorithms"]
authors.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
q_moves = []
chess_960 = ["thermite_core/chess_960"]

[dependencies]
thermite_core = { path = "../thermite_core", features = ["move_generation"] }