[package]
name = "thermite_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["q_search", "move_ordering", "transposition_table", "progress_reporting", "multipv", "opening_book", "reductions", "pruning", "aspiration_windows"]
q_search = ["thermite_movegen/q_moves", "thermite_core/static_exchange_eval"]
move_ordering = ["killer_heuristic", "history_heuristic", "countermove_heuristic", "static_exchange_eval"]
transposition_table = ["thermite_core/zobrist", "dashmap"]
killer_heuristic = []
history_heuristic = []
countermove_heuristic = []
static_exchange_eval = ["thermite_core/static_exchange_eval", "thermite_evaluation/piece_square_evaluation"]
progress_reporting = [] # To support UCI info commands
opening_book = []
pondering = []
multipv = []
aspiration_windows = []
reductions = ["late_move_reduction", "razoring"]
late_move_reduction = []
razoring = []
pruning = ["futility_pruning", "null_move_pruning"]
futility_pruning = []
null_move_pruning = []

[dependencies]
thermite_core = { path = "../thermite_core", default-features = false, features = ["chess_960", "repetitions"] }
thermite_movegen = { path = "../thermite_movegen", default-features = false }
thermite_evaluation = { path = "../thermite_evaluation", default-features = true }
dashmap = { version = "5.3.4", optional = true }